# academy

./: .gitignore
absents_cpp_client/: Absents.pro  res.qrc
absents_cpp_client/include/: absenttypebox.h  apistructs.h  baseworker.h  mainwindow.h  settings.h
absents_cpp_client/src/: absenttypebox.cpp  baseworker.cpp  main.cpp  mainwindow.cpp  settings.cpp
absents_cpp_client/ui/: mainwindow.ui
docs/: queryes_file
faculties/: Dockerfile  pyproject.toml
faculties/src/: database.db  server.py
faculties/src/api/: queryes.py  types.py
faculties/src/db/: models.py  resolvers.py
faculties/src/files/: files_handel.py
gateway/: Dockerfile  config.yaml  server.ts  supergraph-config.yaml  supergraph-schema.graphql
server/: Dockerfile
server/core/: main.py  requirements.txt
server/core/api/: __init__.py  api_models.py  educational_forms.py  faculties.py  groups.py
server/core/sql/: local_base.py  sql_models.py
server/src/: main.py
server/src/api/: __init__.py  api_models.py  attendance.py  discipline.py  educational_forms.py  faculties.py  groups.py  schedule.py  students.py  sub_groups.py  teachers.py
server/src/settings/: settings.py
server/src/sql/: __init__.py  local_base.py  sql_models.py
server/tests/: test_educational_forms.py
src/: main.py  settings.py
students/: Dockerfile  pyproject.toml
students/src/: database.db  server.py
students/src/api/: queryes.py  types.py
students/src/db/: base.py  models.py  resolvers.py
students/src/files/: files_handel.py
uml/: academy.vpp
users/: Dockerfile  pyproject.toml
users/src/: database.db  server.py
users/src/api/: queryes.py  types.py  users.py
users/src/db/: base.py  models.py  resolvers.py
webclient/: app.js  package-lock.json  package.json
webclient/controllers/: groups.js
webclient/public/stylesheets/: style.css
webclient/routes/: groups.js  index.js
webclient/views/: error.pug  groups_list.pug  index.pug  layout_old.pug  students_list.pug
webclient/views/layouts/: layout.pug
webclient/views/mixins/navbars/: group_navbar.pug  left_main_nemu.pug
webclient/views/pages/: students_index.pug
