[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Yartsev Vladimir <v.rainovsky@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = {extras = ["fastapi"], version = "^0.134.3"}
uvicorn = "^0.18.3"
aiosqlite = "^0.17.0"
fastapi = "^0.85.0"
sqlalchemy = "^1.4.42"
taskipy = "^1.10.3"

[tool.taskipy.tasks]
server = "uvicorn server:app --host localhost --port 11800 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
